fixed the issue with display not showing

--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ textarea {
   padding: 10px;
 }
 
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: rgb(105, 105, 105);
+  border-radius: 0;
+  border-bottom: 10px solid black;
+}
+
 header {
   text-align: center;
   background-color: transparent;
@@ -38,7 +46,7 @@ header {
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #818181;
   color: #000000;
   border-top: 1px dashed #000000;
 }
@@ -69,4 +77,15 @@ header {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.time {
+  background-color: #ff6961;
+  border-radius: 30px;
+  margin: 0 auto;
+  width: 50%;
+  padding: 10px;
+  color: white;
+  font-size: 20px;
+  margin-top: 20px;
 }
